--- a/views/home.erb
+++ b/views/home.erb
@@ -32,7 +32,7 @@
       para obtener la respuesta en JSON</p>
 
     <p>Por ejemplo:</p>
-    <pre>$ curl -H "Accept: application/json" -G "http://<%= env["HTTP_HOST"] %>/geocode?address=18+de+julio+1860
+    <pre>$ curl -H "Accept: application/json" -G "http://<%= env["HTTP_HOST"] %>/geocode?address=18+de+julio+1860"
 { "response_code": "200",
   "latitude":      -34.90204,
   "longitude":     -56.17594,
