--- a/views/home.erb
+++ b/views/home.erb
@@ -3,44 +3,52 @@
   <head>
     <title>Geocoding Montevideo</title>
     <meta charset="utf8">
+    <link href="http://fonts.googleapis.com/css?family=Lobster:regular&subset=cyrillic,latin" rel="stylesheet">
+    <link href="/css/reset.css" rel="stylesheet">
+    <link href="/css/main.css" rel="stylesheet">
   </head>
   <body>
     <h1>Geocoding Montevideo</h1>
 
-    <form action="/geocode" method="get">
-      <p><label for="address">Busca una dirección en Montevideo:</label></p>
-      <p>
-        <input type="text" name="address" id="address" value="<%= address %>">
-        <button type="submit">Buscar</button>
-      </p>
-    </form>
+    <section id="search">
+      <form action="/geocode" method="get">
+        <p><label for="address">Busca una dirección en Montevideo:</label></p>
+        <p>
+          <input autofocus type="text" name="address" id="address" value="<%= address %>">
+          <button type="submit">Buscar</button>
+        </p>
+      </form>
+    </section>
 
-    <% if lat_long.exact_match? %>
-      <dl>
-        <dt>Latitude:</dt>
-        <dd><%= lat_long.latitude %></dd>
-        <dt>Longitude:</dt>
-        <dd><%= lat_long.longitude %></dd>
-      </dl>
-    <% elsif address && address.size > 0 %>
-      <p class="error">No exact match for "<%= address %>"</p>
-    <% end %>
+    <section id="results">
+      <% if lat_long.exact_match? %>
+        <dl>
+          <dt>Latitud:</dt>
+          <dd><%= lat_long.latitude %>&deg;N</dd>
+          <dt>Longitud:</dt>
+          <dd><%= lat_long.longitude %>&deg;E</dd>
+        </dl>
+      <% elsif address && address.size > 0 %>
+        <p class="error">No exact match for "<%= address %>"</p>
+      <% end %>
+    </section>
 
-    <h2>API</h2>
+    <section id="api-docs">
+      <h2>API</h2>
 
-    <p>Accede a esta página con el header <code>Accept: application/json</code>
-      para obtener la respuesta en JSON</p>
+      <p>Accede a esta página con el header <code>Accept: application/json</code>
+        para obtener la respuesta en JSON. Por ejemplo:</p>
 
-    <p>Por ejemplo:</p>
-    <pre>$ curl -H "Accept: application/json" -G "http://<%= env["HTTP_HOST"] %>/geocode?address=18+de+julio+1860"
-{ "response_code": "200",
-  "latitude":      -34.90204,
-  "longitude":     -56.17594,
-  "address":       "18 de julio 1860" }</pre>
+      <pre>$ curl -H "Accept: application/json" -G "http://<%= env["HTTP_HOST"] %>/geocode?address=18+de+julio+1860"
+  { "response_code": "200",
+    "latitude":      -34.90204,
+    "longitude":     -56.17594,
+    "address":       "18 de julio 1860" }</pre>
 
-    <p>Cuando se encuentre la dirección en la base de datos el API retornará
-      <strong><code>response_code: 200</code></strong>. Si la dirección no se
-      encuentra, entonces se retornará <strong><code>response_code:
-      404</code></strong>
+      <p>Cuando se encuentre la dirección en la base de datos el API retornará
+        <strong><code>response_code: 200</code></strong>. Si la dirección no se
+        encuentra, entonces se retornará <strong><code>response_code:
+        404</code></strong>
+    </section>
   </body>
 </html>
