--- a/views/home.erb
+++ b/views/home.erb
@@ -29,7 +29,7 @@
           <dd><%= lat_long.longitude %>&deg;E</dd>
         </dl>
       <% elsif address && address.size > 0 %>
-        <p class="error">No exact match for "<%= address %>"</p>
+        <p class="error">No encontramos la dirección "<%= address %>".</p>
       <% end %>
     </section>
 
