Made by Cubox, data by CloudMade

--- a/views/home.erb
+++ b/views/home.erb
@@ -8,7 +8,9 @@
     <link href="/css/main.css" rel="stylesheet">
   </head>
   <body>
-    <h1>Geocoding Montevideo</h1>
+    <header>
+      <h1>Geocoding Montevideo</h1>
+    </header>
 
     <section id="search">
       <form action="/geocode" method="get">
@@ -50,5 +52,12 @@
         encuentra, entonces se retornará <strong><code>response_code:
         404</code></strong>
     </section>
+
+    <footer>
+      <address>
+        <a href="http://cuboxsa.com"><span>Hecho por </span><img src="/img/cubox.png" width="106" height="40"></a>
+        <a href="http://cloudmade.com"><img src="/img/cloudmade.png" width="40" height="40"><span> provee los datos</span></a>
+      </address>
+    </footer>
   </body>
 </html>
