--- a/public/css/main.css
+++ b/public/css/main.css
@@ -87,3 +87,35 @@ section {
   font-size: 14px;
   line-height: 21px;;
 }
+
+footer {
+  width: 980px;
+  text-align: center;
+  margin: 38px auto 16px;
+}
+
+footer address {
+  font-style: normal;
+}
+
+footer a {
+  display: inline-block;
+  height: 40px;
+  text-decoration: none;
+  color: #999;
+}
+
+footer a:first-child {
+  padding-right: 12px;
+  border-right: 1px solid #ccc;
+}
+
+footer a:last-child {
+  padding-left: 12px;
+}
+
+footer a span {
+  position: relative;
+  bottom: 8px;
+  padding: 0 6px;
+}
