--- a/views/home.erb
+++ b/views/home.erb
@@ -3,7 +3,7 @@
   <head>
     <title>Geocoding Montevideo</title>
     <meta charset="utf8">
-    <link href="http://fonts.googleapis.com/css?family=Lobster:regular&subset=cyrillic,latin" rel="stylesheet">
+    <link href="http://fonts.googleapis.com/css?family=Arvo:bold&subset=latin" rel="stylesheet">
     <link href="/css/reset.css" rel="stylesheet">
     <link href="/css/main.css" rel="stylesheet">
   </head>
