--- a/views/home.erb
+++ b/views/home.erb
@@ -43,7 +43,7 @@
     </section>
 
     <section id="api-docs">
-      <h2>API</h2>
+      <h2>Herramientas para desarrolladores</h2>
 
       <p>Accede a esta página con el header <code>Accept: application/json</code>
         para obtener la respuesta en JSON. Por ejemplo:</p>
