--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,7 +7,7 @@ body {
 }
 
 h1 {
-  margin: 16px auto 32px;
+  margin: 48px auto;
   width: 980px;
   text-align: center;
   font: 36px/38px Arvo, serif;
