Attribute OSM, not CloudMade

--- a/views/home.erb
+++ b/views/home.erb
@@ -64,8 +64,8 @@
 
     <footer>
       <address>
-        <a href="http://cuboxsa.com"><span>Hecho por </span><img src="/img/cubox.png" width="106" height="40"></a>
-        <a href="http://cloudmade.com"><img src="/img/cloudmade.png" width="40" height="40"><span> provee los datos</span></a>
+        <a href="http://cuboxsa.com"><span>Hecho por </span><img src="/img/cubox.png" width="106" height="40" alt="Cubox" title="Cubox"></a>
+        <a href="http://openstreetmap.org"><img src="/img/osm.png" width="40" height="40" title="OpenStreetMap" alt="OpenStreetMap"><span> provee los datos</span></a>
       </address>
     </footer>
 
