It's Open Source, bitches!

--- a/views/home.erb
+++ b/views/home.erb
@@ -67,6 +67,7 @@
         <a href="http://cuboxsa.com"><span>Hecho por </span><img src="/img/cubox.png" width="106" height="40" alt="Cubox" title="Cubox"></a>
         <a href="http://openstreetmap.org"><img src="/img/osm.png" width="40" height="40" title="OpenStreetMap" alt="OpenStreetMap"><span> provee los datos</span></a>
       </address>
+      <p class="oss">El código de esta aplicación es abierto: <a href="http://github.com/cubox/geocoder-montevideo">obtenlo aquí</a>.</p>
     </footer>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
