--- a/public/css/main.css
+++ b/public/css/main.css
@@ -149,24 +149,34 @@ footer address {
   font-style: normal;
 }
 
-footer a {
+footer address a {
   display: inline-block;
   height: 40px;
   text-decoration: none;
   color: #999;
 }
 
-footer a:first-child {
+footer address a:first-child {
   padding-right: 16px;
-  border-right: 1px solid #ccc;
 }
 
-footer a:last-child {
+footer address a:last-child {
+  border-left: 1px solid #ccc;
   padding-left: 12px;
 }
 
-footer a span {
+footer address a span {
   position: relative;
   bottom: 8px;
   padding: 0 6px;
+}
+
+footer .oss {
+  font-size: 12px;
+  line-height: 18px;
+  margin-bottom: 6px;
+}
+
+footer .oss, footer .oss a {
+  color: #999;
 }
