--- a/views/home.erb
+++ b/views/home.erb
@@ -33,19 +33,22 @@
         </dl>
 
         <img id="static-map" class="map"
-          src="<%= Geocoder.map(lat_long.latitude, lat_long.longitude) %>"
+          src="<%= Geocoder.map(lat_long.latitude, lat_long.longitude, "977x272") %>"
           data-latitude="<%= lat_long.latitude %>"
           data-longitude="<%= lat_long.longitude %>"
-          data-address="<%= address %>">
+          data-address="<%= address %>"
+          alt="Map for <%= address %>">
       <% elsif address && address.size > 0 %>
         <p class="error">No encontramos la dirección "<%= address %>".</p>
       <% end %>
     </section>
 
     <section id="api-docs">
-      <h2>Herramientas para desarrolladores</h2>
+      <h2>Herramientas</h2>
 
       <div>
+        <h3>API en JSON</h3>
+
         <p>Accede a esta página con el header <code>Accept: application/json</code>
           para obtener la respuesta en JSON. Por ejemplo:</p>
 
@@ -59,6 +62,30 @@
           <strong><code>response_code: 200</code></strong>. Si la dirección no se
           encuentra, entonces se retornará <strong><code>response_code:
           404</code></strong>
+
+        <h3>Mapas Embebibles</h3>
+
+        <p class="overview">Accede a la URL <code><%= link "http://#{env["HTTP_HOST"]}/geocode/map.png?address=18+de+julio+1860" %></code>
+          para obtener el mapa como imagen estática.</p>
+
+        <p>Puedes configurar el mapa con los siguientes parámetros en la URL:</p>
+        <dl>
+          <dt><code>size</code></dt>
+          <dd>
+            <p>Una cadena de la forma <code>ANCHOxLARGO</code>, por ejemplo <code>size=500x600</code>.</p>
+            <p>Si solo especificas un valor, la imagen será cuadrada:
+              <code>size=340</code></p>
+            <p>Ejemplo: <code><%= link "http://#{env["HTTP_HOST"]}/geocode/map.png?address=18+de+julio+1860&size=500x600" %></code></p>
+            <p><em>Valor por omisión:</em> <code>400x300</code></p>
+          </dd>
+
+          <dt><code>zoom</code></dt>
+          <dd>
+            <p>Un número entre <code>1</code> y <code>18</code>, por ejemplo <code>zoom=13</code>.</p>
+            <p>Ejemplo: <code><%= link "http://#{env["HTTP_HOST"]}/geocode/map.png?address=18+de+julio+1860&zoom=13" %></code></p>
+            <p><em>Valor por omisión:</em> <code>16</code></p>
+          </dd>
+        </dl>
       </div>
     </section>
 
