--- a/public/css/main.css
+++ b/public/css/main.css
@@ -55,6 +55,13 @@ a:hover, a:active {
   text-shadow: 0 1px 0 #fff;
 }
 
+#search input.loading {
+  background-image: url(/img/loader.gif), -webkit-gradient(linear, 0% 0%, 0% 100%, from(#f8f8f8), to(#f0f0f0));
+  background-image: url(/img/loader.gif), -moz-linear-gradient(top, #f8f8f8 0%, #f0f0f0 100%);
+  background-repeat: no-repeat;
+  background-position: 99% 50%;
+}
+
 #search button {
   position: relative;
   top: 2px;
