--- a/views/home.erb
+++ b/views/home.erb
@@ -15,6 +15,8 @@
 
     <section id="search">
       <form action="/geocode" method="get">
+        <input type="hidden" name="snowman" value="☃">
+
         <p><label for="address">Busca una dirección en Montevideo:</label></p>
         <p>
           <input autofocus autocomplete="off" type="text" name="address" id="address" value="<%= address %>">
@@ -24,20 +26,27 @@
     </section>
 
     <section id="results">
-      <% if lat_long.exact_match? %>
+      <% if results.exact_match? %>
         <dl>
           <dt>Latitud:</dt>
-          <dd><%= lat_long.latitude %>&deg;N</dd>
+          <dd><%= results.latitude %>&deg;N</dd>
           <dt>Longitud:</dt>
-          <dd><%= lat_long.longitude %>&deg;E</dd>
+          <dd><%= results.longitude %>&deg;E</dd>
         </dl>
 
         <img id="static-map" class="map"
-          src="<%= Geocoder.map(lat_long.latitude, lat_long.longitude, "977x272") %>"
-          data-latitude="<%= lat_long.latitude %>"
-          data-longitude="<%= lat_long.longitude %>"
+          src="<%= Geocoder.map(results.latitude, results.longitude, "977x272") %>"
+          data-latitude="<%= results.latitude %>"
+          data-longitude="<%= results.longitude %>"
           data-address="<%= address %>"
           alt="Map for <%= address %>">
+      <% elsif results.any? %>
+        <p class="error">Múltiples resultados para "<%= address %>"</p>
+        <ul id="multiple-choices">
+          <% results.expanded.each do |result| %>
+            <li><%= link result.address, address_url(result) %></li>
+          <% end %>
+        </ul>
       <% elsif address && address.size > 0 %>
         <p class="error">No encontramos la dirección "<%= address %>".</p>
       <% end %>
@@ -123,7 +132,7 @@
       });
     </script>
 
-    <% if lat_long.exact_match? %>
+    <% if results.exact_match? %>
       <script src="http://tile.cloudmade.com/wml/0.2/web-maps-lite.js"></script>
       <script>
         jQuery(function($) {
