make sure the autocomplete is closed when submitting the search form

--- a/views/home.erb
+++ b/views/home.erb
@@ -147,6 +147,7 @@
         }
 
         searchForm.submit(function() {
+          address.autocomplete("close");
           load(this.action + "?" + searchForm.serialize());
           return false;
         });
