--- a/views/home.erb
+++ b/views/home.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es-UY">
   <head>
-    <title>Acá Vamos!</title>
+    <title>¡Acá Vamos!</title>
     <meta charset="utf8">
     <meta name="cloudmade-api-key" content="<%= API_KEY %>">
     <link href="http://fonts.googleapis.com/css?family=Arvo:bold&subset=latin" rel="stylesheet">
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <h1>Acá Vamos!</h1>
+      <h1>¡Acá Vamos!</h1>
     </header>
 
     <section id="search">
