Errr, more Uruguayan :)

--- a/views/home.erb
+++ b/views/home.erb
@@ -15,7 +15,7 @@
 
     <section id="search">
       <form action="/geocode" method="get">
-        <p><label for="address">Busca una dirección en Montevideo:</label></p>
+        <p><label for="address">Buscá una dirección en Montevideo:</label></p>
         <p>
           <input autofocus autocomplete="off" type="text" name="address" id="address" value="<%= address %>">
           <button type="submit">Buscar</button>
